--- a/page1.html
+++ b/page1.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AYSAR YAHYA</title>
+    <title>Trendyol</title>
     <style>
         /* General styles */
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('https://pixabay.com/photos/animal-mammal-elephant-nature-8857572/');
+            background-image: url('https://source.unsplash.com/random/1920x1080');
             background-size: cover;
             background-position: center;
             height: 100vh;
-            color: white;
+            color: #FFCC80;
         }
         h1 {
             text-align: center;
