--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
             background-size: cover;
             background-position: center;
             height: 100vh;
-            color: #FFCC80;
+            color: white;
         }
         h1 {
             text-align: center;
